Fix #1046 - Media breaking out of container

--- a/mediagoblin/static/css/audio.css
+++ b/mediagoblin/static/css/audio.css
@@ -1,6 +1,9 @@
 .audio-spectrogram {
     position: relative;
 }
+.audio-spectrogram > img {
+    width: 100%;
+}
 .playhead {
     position: absolute;
     top: 0;
